force-app/main/default/objects/Simply_Task_Setting__mdt/Simply_Task_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Simply Task Setting</label>
    <pluralLabel>Simply Task Settings</pluralLabel>
</CustomObject>