force-app/main/default/objects/Simply_Task_Setting__mdt/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>