force-app/main/default/objects/Simply_Task_Setting__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>