force-app/main/default/objects/Simply_Task_Setting__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>